Update and rename config.json.example to config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "TOKEN": "",
-  "YOUTUBE_API_KEY": "",
+  "TOKEN": "ODk2NDc4NjczMzEyNTc1NTQw.YWHs0w.gqFWntaW8Ee14ORGjn_LqBPU5Mk",
+  "YOUTUBE_API_KEY": "AIzaSyCdRxwKbcHcbuyc3juCc6Pjqev6gxn2k4Y",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
   "PREFIX": "/",
