--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "ODk2NDc4NjczMzEyNTc1NTQw.YWHs0w.BgJ___9rPLTmq5YQut34dhJE4Nk",
+  "TOKEN": "OTQyMzk3NTI4MjQwOTYzNTg1.Ygj6Fw.Ybe860BZ4JzNQrkoYFSIaq6v8bI",
   "YOUTUBE_API_KEY": "AIzaSyCdRxwKbcHcbuyc3juCc6Pjqev6gxn2k4Y",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
